Update index.html with latest features and styles

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     </div>
 
     <div class="social-links">
-      <a class="social-link insta" href="https://instagram.com/yourprofile" target="_blank" title="Instagram">
+      <a class="social-link insta" href="https://instagram.com/@sanjeevan_official_74" target="_blank" title="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
       <a class="social-link fb" href="https://facebook.com/yourprofile" target="_blank" title="Facebook">
